# finazops

./: README.md  azure_auth.py  azure_login.py  check-budgets.ps1  check-budgets.sh  detect-waste.ps1  detect-waste.sh  finops_cli.py  finops_server.py  generate-recommendations.ps1  generate-recommendations.sh  init.bat  init.sh  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  run-app.yml
finazops/: cli.py
