[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-finops-dashboard"
version = "0.1.0"
description = "FinOps CLI Toolkit for Azure"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name="FinOps"}]
dependencies = [
    "rich",
    "fpdf",
    "azure-identity",
    "azure-mgmt-resource",
]

[project.scripts]
azure-finops = "finazops.cli:main"
